# v0EtNXHdB94LSfy3xmP5ZrAjxF7WgQKcv1uYnVqpoUJeR36lGzCAMb2DshkTiwO8n

./: .gitignore  250703PatentJAMNet.md  250710_043812_MASTER_INDEX_PBJ_DOCUMENTATION.md  250710_043927_MASTER_INDEX_PBJ_DOCUMENTATION.md  250710_045720_ASSISTANT_FAILURE_ANALYSIS.md  250710_051121_ASSISTANT_FAILURE_ANALYSIS_UPDATE.md  BACKUP_COMPLETE_STATUS.md  BARS_BEATS_RESET_BUG_FIX_COMPLETE.md  CLEANUP_PHASE_COMPLETE.md  CLOCK_SYNC_FONT_FIXES_COMPLETE.md  COLLABORATION.md  CPU_INTERACTION_UNIVERSAL_JSON_STRATEGY.md  CRITICAL_TRANSPORT_FIXES.md  CROSS_PLATFORM_INTEGRATION_PLAN.md  ChatGPTCheckinPhase2.md  ChatGPTCheckinPhase_1_2.md  DEVELOPER_GUIDELINES.md  DOCUMENTATION_AUDIT_RESOLUTION_COMPLETE.md  DOCUMENTATION_UPDATE_PLAN.md  FASTERTHANLIGHT.md  FINAL_BACKUP_STATUS.md  FRESH_BACKUP_STATUS.md  GITHUB_BACKUP_COMPLETE_JULY_7_2025.md  GIT_BACKUP_STATUS.md  GPU4JAMnTOAST.md  GPU_NATIVE_ARCHITECTURE_AUDIT.md  GPU_NATIVE_TRANSFORMATION_PROGRESS.md  GPU_NATIVE_VISION_ALIGNMENT.md  JAMNET_IMPLEMENTATION_BRIDGE.md  JAMNET_INTEGRATION_GUIDE.md  JAMNET_MANIFESTO.md  JDAT.md  JDAT_Fix.md  JELLIE_PRODUCTION_READY.md  JSONADAT.md  JSONVID+JAMCAM.md  LATENCY_DOCTRINE.md  LATEST_CHANGES_SUMMARY.md  LINUX-Prep-converted.txt  LINUX-Prep.md  (+96 more)
JAM_Framework/examples/: CMakeLists.txt  complete_session_example.cpp
JAM_Framework_v2/: CMakeLists.txt  README.md  compile_vulkan_shaders.sh  validation_build.sh
JAM_Framework_v2/cmake/: JAMFrameworkConfig.cmake.in
JAM_Framework_v2/examples/: CMakeLists.txt  api_elimination_demo.cpp  audio_backend_test.cpp  basic_receiver.cpp  basic_sender.cpp  cross_platform_audio_test.cpp  cross_platform_gpu_timer  cross_platform_gpu_timer.cpp  gpu_performance_profiler.cpp  gpu_test.cpp  header_test.cpp  json_performance_validation.cpp  network_diagnostic_tool.cpp  optimized_timing_system  optimized_timing_system.cpp  physics_compliant_pnbtr  physics_compliant_pnbtr.cpp  pnbtr_jvid_demo.cpp  pnbtr_validator.cpp  simple_test.cpp  standalone_json_performance.cpp  step_test.cpp  timing_validator.cpp  toast_test.cpp
JAM_Framework_v2/include/: AudioOutputBackend.h  GPURenderEngine.h  JackAudioBackend.h  JamAudioFrame.h  MetalRenderEngine.h  VulkanRenderEngine.h  api_elimination_example.h  compact_format.h  compute_pipeline.h  device_discovery.h  gpu_manager.h  jam_core.h  jam_gpu.h  jam_toast.h  jam_transport.h  jdat_bridge.h  jsonl_generator.h  jsonl_parser.h  memory_mapper.h  message_router.h  multithreaded_transport.h  network_state_detector.h
JAM_Framework_v2/shaders/: deduplication.comp  jsonl_parser.comp
JAM_Framework_v2/src/: AudioOutputBackend.cpp  GPURenderEngine.cpp  JackAudioBackend.cpp  JamAudioFrame.cpp  MetalRenderEngine.cpp  MetalRenderEngine.mm  VulkanRenderEngine.cpp
JAM_Framework_v2/tests/: CMakeLists.txt  vulkan_validation_test.cpp
JDAT_Framework/: CMakeLists.txt  Initialization.md  JELLIE_STARTER_KIT.md  README.md  build_and_test.sh
JDAT_Framework/examples/: CMakeLists.txt  adat_192k_demo.cpp  basic_jellie_demo.cpp  multicast_session.cpp  studio_monitoring.cpp
JDAT_Framework/include/: ADATSimulator.h  AudioBufferManager.h  JDATMessage.h  JELLIEDecoder.h  JELLIEEncoder.h  LockFreeQueue.h  PNBTR_JDAT_Bridge.h  WaveformPredictor.h
JDAT_Framework/schemas/: jdat-message.schema.json
JDAT_Framework/shaders/: jellie_decoder.comp  jellie_encoder.comp
JDAT_Framework/src/: ADATSimulator.cpp  AudioBufferManager.cpp  JDATMessage.cpp  JELLIEDecoder.cpp  JELLIEEncoder.cpp  PNBTR_JDAT_Bridge.cpp
JDAT_Framework/tests/: test_jellie_comprehensive.cpp
JMID_Framework/: CMakeLists.txt  JMID_FOCUSED_PLAN.md  JMID_MODERNIZATION_COMPLETE.md  JMID_MODERNIZATION_PLAN.md  README.md  TCP_TOAST_SUCCESS.md  TOAST_V2_INTEGRATION_ASSESSMENT.md  memorymapandc++bridge.md  test_clock_arbiter  test_clock_arbiter.cpp  test_tcp_instructions.sh  test_toast_phase2.cpp  toast_client  toast_client.cpp  toast_server.cpp  toast_server_backup.cpp  toast_udp_client  toast_udp_client.cpp  toast_udp_server  toast_udp_server.cpp
JMID_Framework/benchmarks/: CMakeLists.txt  performance_benchmark.cpp
JMID_Framework/cmake/: jsonmidi_frameworkConfig.cmake.in
JMID_Framework/examples/: CMakeLists.txt  basic_example.cpp  compact_format_test  compact_format_test.cpp  deduplication_test  deduplication_test.cpp  live_demo.cpp  performance_validation_test.cpp  phase12_demo.cpp  simd_parser_test.cpp  (+4 more)
JSONADAT_Framework/: CMakeLists.txt  Initialization.md  JELLIE-integation.md  README.md
JSONMIDI_Framework/: Burst.md  CMakeLists.txt  ClocksyncModule  Initialization.md  Roadmap.md  TCP_TOAST_SUCCESS.md  memorymapandc++bridge.md  test_tcp_communication  test_tcp_communication.cpp  test_tcp_instructions.sh  test_toast_phase2_clean  test_toast_phase2_clean.cpp  test_toast_tcp_fixed  toast_client.cpp  toast_server  toast_server.cpp
JSONVID_Framework/: CMakeLists.txt  Initialization.md  README.md
JVID_Framework/: CMakeLists.txt  Initialization.md  README.md  adapt.md
MIDILink/: CMakeLists.txt
PNBTR_Framework/: CMakeLists.txt  PNBTR-JVID.md  README.md  STARTER_KIT.md
PNBTR_JELLIE_DSP/: CMakeLists.txt
TOASTer/: BUILD_HELP_REQUEST.md  BUILD_READY_INSTRUCTIONS.md  BUILD_STATUS_REPORT.md  BUILD_TROUBLESHOOTING.md  CMakeLists.txt  CMakeLists_Minimal.txt  CMakeLists_Old.txt  CMakeLists_macOS.txt  CMakeLists_simple.txt  ICON_SETUP_GUIDE.md  README.md  RESTORATION_COMPLETE.md  SIMPLIFIED_STATUS.md  TRANSPORT_HELP_REQUEST.md  TRANSPORT_SYNC_VERIFIED.md  calculate_distance_limits.py  create_standalone_build.sh  create_standalone_macos.sh  create_standalone_simple.sh  create_toaster_icon.sh  demo_multi_peer_sync.py  demo_network_scenarios.sh  fix_jack_dependency.sh  fix_jack_properly.sh  generate_icons.sh  metro_wan_test_summary.md  mock_vs_reality_analysis.py  network_stress_results.md  package_existing_build.sh  quick_macos_build.sh  simulate_transport_sync.py  test_burst_redundancy.py  test_metro_wan_limits.py  test_network_stress.py  test_standalone.sh  test_transport_sync.sh  test_wifi_discovery.cpp
phase4c_test/: CMakeLists.txt  phase4c_build_test.mm
standalone/: CMakeLists.txt
(+1171 files in other folders)
